src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Banca__c</fullName>
        <description>Indica la banca al que pertenece el producto.</description>
        <label>Banca</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Banca</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_FamiliaProductos__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Familia de productos</label>
        <referenceTo>MX_WB_FamiliaProducto__c</referenceTo>
        <relationshipLabel>Products (Familia de productos)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_SAC_Proceso__c</fullName>
        <description>Indica a que proceso pertenece cada producto.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Proceso</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>